# core

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  deny.toml
crates/idml-canvas/: Cargo.toml
crates/idml-canvas-wasm/: Cargo.toml
crates/idml-canvas-wasm/src/: lib.rs
crates/idml-canvas/src/: camera.rs  channel.rs  element_selection.rs  geometry.rs  gesture.rs  hit.rs  lib.rs  model.rs  mutate.rs  resolve.rs  selection.rs  snap.rs  snapshot.rs
crates/idml-canvas/tests/: content_gesture.rs  determinism.rs  frame_mutation_bridge.rs  group_gesture.rs  hit_offset.rs  inspector_wire.rs  layout_cache.rs  path_edit_gesture.rs  rotate_scale_gesture.rs  ruler_guides_handle.rs  translate_gesture.rs
crates/idml-color/: Cargo.toml
crates/idml-color/examples/: icc_smoke.rs
crates/idml-color/src/: lib.rs
crates/idml-compose/: Cargo.toml
crates/idml-compose/src/: display_list.rs  lib.rs  primitives.rs  text.rs
crates/idml-edit/: Cargo.toml
crates/idml-edit-wasm/: Cargo.toml
crates/idml-edit-wasm/src/: lib.rs
crates/idml-edit/src/: caret.rs  command.rs  guides.rs  hittest.rs  ids.rs  lib.rs  patch.rs  persist.rs  project.rs  rope.rs  style_graph.rs
crates/idml-edit/tests/: seed_hello.rs
crates/idml-gen/: Cargo.toml
crates/idml-gen/src/: geometry.rs  ids.rs  lib.rs  samples.rs  xml.rs
crates/idml-gen/src/builders/: designmap.rs  master.rs  page_item.rs  resources.rs  spread.rs  story.rs
crates/idml-gen/src/samples/: anchored.rs  effects.rs  geometry.rs  geometry_groups.rs  gradients.rs  images.rs  strokes_fills.rs  tables.rs  text.rs  text_advanced.rs  text_letterspacing.rs  transparency.rs
crates/idml-gen/tests/: snapshot.rs
crates/idml-gpu/: Cargo.toml  build.rs
crates/idml-gpu/src/: cpu.rs  lib.rs  surface.rs  vello_rs.rs
crates/idml-gpu/src/cmyk_compute/: mod.rs
crates/idml-introspect/: Cargo.toml
crates/idml-introspect-wasm/: Cargo.toml
crates/idml-introspect-wasm/src/: lib.rs
crates/idml-introspect/src/: descriptor.rs  lib.rs  render.rs  testutil.rs  tree.rs
crates/idml-mutate/: Cargo.toml
crates/idml-mutate/src/: apply.rs  bezier_conv.rs  error.rs  invert.rs  lib.rs  operation.rs  path_math.rs  pathfinder.rs
crates/idml-parse/: Cargo.toml
crates/idml-parse/examples/: dump_anchored.rs  dump_markers.rs
crates/idml-parse/src/: designmap.rs  graphic.rs  lib.rs  spread.rs  story.rs  styles.rs  util.rs
crates/idml-parse/tests/: roundtrip.rs
crates/idml-renderer/: Cargo.toml
crates/idml-renderer/examples/: render_real_ttf.rs
crates/idml-renderer/src/: asset.rs  lib.rs  pipeline.rs
crates/idml-renderer/src/module/: corner_path.rs  drop_shadow.rs  effects.rs  fill_paint.rs  frame.rs  geometry.rs  glyph_shadow.rs  group.rs  mod.rs  object_style.rs  stroke_paint.rs
crates/idml-renderer/tests/: inspect_e2e.rs  overprint.rs  pipeline_lib.rs  real_ttf.rs  real_ttf_features.rs  seam_hand_construct.rs  seed_hello.rs  spot_tint.rs  story_layout.rs  text_glyph_level.rs
crates/idml-scene/: Cargo.toml
crates/idml-scene/src/: anchors.rs  layer.rs  lib.rs  value.rs
crates/idml-script/: Cargo.toml
crates/idml-script/src/: lib.rs
crates/idml-script/tests/: script_basics.rs
crates/idml-text/: Cargo.toml
crates/idml-text/src/: cache.rs  compose.rs  hyphenate.rs  layout.rs  lib.rs  shape.rs
crates/idml-wasm/: Cargo.toml
crates/idml-wasm/src/: lib.rs
crates/paged-canvas/: Cargo.toml  INCREMENTAL-RELAYOUT.md
crates/paged-canvas-wasm/: Cargo.toml
crates/paged-canvas-wasm/src/: dispatch.rs  lib.rs
crates/paged-canvas-wasm/tests/: dispatch.rs  wasm.rs
crates/paged-canvas/benches/: pipeline.rs
crates/paged-canvas/src/: blank.rs  camera.rs  channel.rs  element_selection.rs  export.rs  geometry.rs  gesture.rs  hit.rs  lib.rs  model.rs  mutate.rs  resolve.rs  resource_tiles.rs  selection.rs  snap.rs  snapshot.rs
crates/paged-canvas/tests/: cell_text.rs  color_settings.rs  composition_part.rs  content_gesture.rs  determinism.rs  emit_cache_undo.rs  export_idml.rs  export_pdf.rs  frame_mutation_bridge.rs  group_gesture.rs  groups_v2_wire.rs  hit_offset.rs  idml_export_saveback.rs  insert_shape_bridge.rs  inspector_wire.rs  layout_cache.rs  load_sniff.rs  model_part.rs  overset_wire.rs  page_ops.rs  path_edit_gesture.rs  perf_instrumentation.rs  place_image_wire.rs  placeholder_wire.rs  resource_provider.rs  rotate_scale_gesture.rs  ruler_guides_handle.rs  scene_layer.rs  shear_gesture.rs  spread_transform_hit.rs  swatch_library.rs  tablecell_wire.rs  tables_wire.rs  translate_gesture.rs  w3a0_read_surface.rs  wire_robustness.rs
crates/paged-color/: Cargo.toml
crates/paged-color/examples/: icc_smoke.rs
crates/paged-color/src/: ase.rs  cmm.rs  lab.rs  lib.rs
crates/paged-color/tests/: parity.rs
crates/paged-compose/: Cargo.toml
crates/paged-compose/src/: display_list.rs  glyph.rs  lib.rs  pixel_layer.rs  primitives.rs  scene_layer.rs  text.rs
crates/paged-composition/: Cargo.toml
crates/paged-composition-render/: Cargo.toml
crates/paged-composition-render/src/: lib.rs
crates/paged-composition/src/: lib.rs  render.rs
crates/paged-export-pdf/: Cargo.toml
crates/paged-export-pdf/examples/: export_fixture.rs
crates/paged-export-pdf/src/: color.rs  gstate.rs  image.rs  lib.rs  marks.rs  page.rs  path.rs  text.rs  transparency.rs  writer.rs
crates/paged-export-pdf/tests/: export_x4.rs  links.rs
crates/paged-fidelity/: Cargo.toml
crates/paged-fidelity/src/: color.rs  diff.rs  lib.rs  ssim.rs
crates/paged-fidelity/tests/: cli_smoke.rs
crates/paged-flow/: Cargo.toml
crates/paged-flow/src/: lib.rs
crates/paged-gen/: Cargo.toml
crates/paged-gen/src/: builders.rs  geometry.rs  ids.rs  lib.rs  package.rs  samples.rs  xml.rs
crates/paged-gen/src/builders/: designmap.rs  master.rs  page_item.rs  resources.rs  (+3 more)
crates/paged-gen/tests/: snapshot.rs
crates/paged-gpu/: Cargo.toml  build.rs
crates/paged-gpu/src/: cpu.rs  lib.rs  surface.rs  vello_rs.rs
crates/paged-introspect-wasm/: Cargo.toml
crates/paged-introspect-wasm/src/: lib.rs
(+291 files in other folders)
