[workspace]
resolver = "2"
members = [
    "crates/paged-model",
    "crates/paged-flow",
    "crates/paged-composition",
    "crates/paged-composition-render",
    "crates/paged-scene",
    "crates/paged-text",
    "crates/paged-color",
    "crates/paged-compose",
    "crates/paged-gpu",
    "crates/paged-renderer",
    "crates/paged-fidelity",
    "crates/paged-sdk",
    "crates/paged-mutate",
    "crates/paged-introspect",
    "crates/paged-introspect-wasm",
    "crates/paged-gen",
    "crates/paged-store",
    "crates/paged-canvas",
    "crates/paged-canvas-wasm",
    "crates/paged-export-pdf",
    "crates/paged-script",
    "crates/paged-run",
    "spikes/vello-eval",
    "spikes/composer-calibration",
    "spikes/wasm-size",
]
# W0 (paged.web) — standalone on purpose: the Blitz/Stylo tree is huge
# and version-skewed from the workspace; keep it out of our Cargo.lock.
exclude = ["spikes/blitz-wasm"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MPL-2.0 OR LicenseRef-PMEL"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"

# Shared dependency versions. Individual crates pick what they need.
# Versions are intentionally conservative pins; bump during Phase 0.
[workspace.dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.41", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "gif", "bmp"] }
base64 = "0.22"
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"
# W1.24 (audit B17) — benchmark harness (dev-only). `html_reports` is
# off: the bench lane is local + CI-smoke, not a report-publishing gate,
# and the gnuplot/plotters report deps bloat the dev build for no value
# in `make bench`. Declared at the workspace level so any crate that
# grows a bench picks the same pin.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# N10.2 — the IDML adapter (idml-import/idml-export) now lives in the public
# paged-media/plugin-publish repo and is git-depended back into the engine.
# The adapter git-deps the shared model crates from THIS repo; Cargo would
# otherwise treat those git copies as distinct from core's local crates
# (path source != git source), so `import_idml`'s Document wouldn't be core's
# Document. This [patch] redirects the adapter's git deps on core's own model
# crates back to the local sources, unifying crate identity.
[patch."https://github.com/paged-media/core"]
paged-model = { path = "crates/paged-model" }
paged-scene = { path = "crates/paged-scene" }
paged-flow = { path = "crates/paged-flow" }
paged-composition = { path = "crates/paged-composition" }
