[package]
name = "idml-canvas-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wasm-bindgen surface for the IDML Web Canvas worker model. Thin layer over idml-canvas."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Pulls in idml-gpu's Vello + WebGPU backend so the worker can render
# directly to the OffscreenCanvas's GPU surface. Only meaningful on
# wasm32 — the build-wasm script always enables it.
gpu = ["idml-gpu/vello-backend", "dep:idml-gpu", "dep:wasm-bindgen-futures"]

[dependencies]
idml-canvas = { path = "../idml-canvas" }
serde = { workspace = true }
serde_json = "1"
idml-gpu = { path = "../idml-gpu", optional = true, default-features = false }
idml-compose = { path = "../idml-compose" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "OffscreenCanvas"] }
console_error_panic_hook = "0.1"
