[package]
name = "idml-edit-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wasm-bindgen surface for the editor (Project + command bus). Separate from idml-wasm so the read-only viewer surface stays small."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
idml-edit = { path = "../idml-edit" }
idml-scene = { path = "../idml-scene" }
idml-renderer = { path = "../idml-renderer" }
idml-compose = { path = "../idml-compose" }
serde = { workspace = true }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
idml-gpu = { path = "../idml-gpu", default-features = false, features = ["vello-backend"] }
