[package]
name = "idml-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "IDML test-corpus generator. Emits multi-page mega-files where each page exercises one renderable feature variant; pairs with the InDesign-exported PDF reference + idml-fidelity diff harness."

[lints]
workspace = true

[dependencies]
zip = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
idml-parse = { path = "../idml-parse" }
sha2 = "0.10"

[[bin]]
name = "idml-gen"
path = "src/bin/idml-gen.rs"
