[package]
name = "idml-introspect-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wasm-bindgen surface for idml-introspect. Consumed by apps/devtools/."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Pulls in the IDML renderer pipeline so `Inspector::renderPage` can
# rasterise pages. Default-on; switch off temporarily when the
# upstream renderer is mid-refactor.
default = ["render"]
render = ["idml-introspect/render"]

[dependencies]
idml-scene = { path = "../idml-scene" }
idml-introspect = { path = "../idml-introspect", default-features = false }
idml-mutate = { path = "../idml-mutate" }
serde = { workspace = true }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# Non-wasm builds: stay buildable so cargo check --workspace stays
# green on the dev host.
