[package]
name = "idml-introspect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Inspector API: tree walk, typed property descriptors, render-page output."

[lints]
workspace = true

[features]
default = ["render"]
render = ["dep:idml-renderer", "dep:image", "dep:idml-compose", "dep:anyhow"]

[dependencies]
idml-parse = { path = "../idml-parse" }
idml-scene = { path = "../idml-scene" }
idml-mutate = { path = "../idml-mutate" }
idml-renderer = { path = "../idml-renderer", optional = true }
idml-compose = { path = "../idml-compose", optional = true }
anyhow = { workspace = true, optional = true }
image = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_json = "1"
