[package]
name = "idml-mutate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Operation-based mutation channel for the IDML scene graph. Typed, serializable, invertible Operations + undo/redo + change notification. Consumed by idml-introspect."

[lints]
workspace = true

[dependencies]
idml-parse = { path = "../idml-parse" }
idml-scene = { path = "../idml-scene" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_json = "1"
