[package]
name = "idml-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "IDML ZIP + XML parser. Produces a typed AST of the supported schema subset."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
zip = { workspace = true }
