[package]
name = "idml-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Top-level renderer coordinator. The public Rust API surface."

[lints]
workspace = true

[features]
default = ["cpu"]
# Pulls in the CPU rasterizer so `render()` is callable. Disabling this
# leaves only `build()` — useful for WASM builds that rely on a
# different backend. `image` is now a non-optional dep because
# the pipeline decodes placed-image bytes at build_document time.
cpu = ["idml-gpu/cpu"]

[[bin]]
name = "idml-inspect"
path = "src/bin/inspect.rs"
required-features = ["cpu"]

[dependencies]
idml-parse = { path = "../idml-parse" }
idml-scene = { path = "../idml-scene" }
idml-text = { path = "../idml-text" }
idml-color = { path = "../idml-color" }
idml-compose = { path = "../idml-compose" }
idml-gpu = { path = "../idml-gpu", default-features = false }
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }
rustybuzz = "0.18"
ttf-parser = "0.24"
serde = { workspace = true }
serde_json = "1"
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
image = { workspace = true }
jpeg-decoder = "0.3"
# SVG rasterization. Pure-Rust, compiles on wasm32. We disable the
# system-fonts / memmap-fonts features (browser sandbox can't read
# system fonts; we'd serve them through the renderer's font resolver
# if a placed SVG needed text — most IDML-embedded SVGs are pure
# vector graphics like icons + logos).
resvg = { version = "0.45", default-features = false, features = ["text"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
idml-fidelity = { path = "../idml-fidelity" }
image = { workspace = true }
zip = { workspace = true }
tempfile = "3"
serde_json = "1"
