[package]
name = "idml-script"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Pure-Rust JS engine. Compiles cleanly to wasm32-unknown-unknown
# without a libc sysroot or wasm-capable clang — the canvas wasm
# build is back to vanilla `cargo build --target wasm32-unknown-
# unknown` once this is the only scripting dep.
boa_engine = { version = "0.21", default-features = false }

idml-canvas = { path = "../idml-canvas" }
idml-mutate = { path = "../idml-mutate" }
serde = { workspace = true }
serde_json = "1"

[lints]
workspace = true
