[package]
name = "idml-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wasm-bindgen surface and browser glue for the renderer."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
idml-renderer = { path = "../idml-renderer" }
idml-parse = { path = "../idml-parse" }
idml-compose = { path = "../idml-compose" }
idml-gpu = { path = "../idml-gpu" }
image = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
