[package]
name = "paged-canvas-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "wasm-bindgen surface for the IDML Web Canvas worker model. Thin layer over paged-canvas."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Pulls in paged-gpu's Vello + WebGPU backend so the worker can render
# directly to the OffscreenCanvas's GPU surface. Only meaningful on
# wasm32 — the build-wasm script always enables it.
gpu = ["paged-gpu/vello-backend", "dep:paged-gpu", "dep:wasm-bindgen-futures"]

[dependencies]
paged-canvas = { path = "../paged-canvas" }
paged-script = { path = "../paged-script" }
serde = { workspace = true }
serde_json = "1"
paged-gpu = { path = "../paged-gpu", optional = true, default-features = false }
paged-compose = { path = "../paged-compose" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "OffscreenCanvas"] }
console_error_panic_hook = "0.1"
# Boa (via paged-script) pulls in getrandom 0.3. On
# wasm32-unknown-unknown getrandom requires an explicit backend
# opt-in; without this it errors with "backends::inner_u64 not
# found". The `wasm_js` feature wires getrandom to the browser's
# `crypto.getRandomValues` via js-sys.
getrandom = { version = "0.3", features = ["wasm_js"] }
