[package]
name = "paged-canvas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Pure-Rust facade for the IDML Web Canvas worker model. No wasm-bindgen — testable headlessly via `cargo test`. Orchestrates Tiers 1–4 (content, layout, resolution, output) on top of paged-renderer."

[lints]
workspace = true

[features]
default = ["cpu"]
# Enables the CPU rasterizer end-to-end through paged-renderer. Disable
# when the canvas is rendered by an out-of-process / out-of-thread
# rasterizer (e.g. the canvas-wasm crate compiled with WebGPU).
cpu = ["paged-renderer/cpu"]

[dependencies]
paged-renderer = { path = "../paged-renderer", default-features = false }
paged-parse = { path = "../paged-parse" }
paged-scene = { path = "../paged-scene" }
paged-compose = { path = "../paged-compose" }
paged-text = { path = "../paged-text" }
paged-mutate = { path = "../paged-mutate" }
paged-color = { path = "../paged-color" }
paged-export-pdf = { path = "../paged-export-pdf" }
serde = { workspace = true }
serde_json = "1"
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
# Snapshot tier encodes its output as PNG; the upstream renderer
# already produces `image::RgbaImage` so we use the same crate.
image = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
zip = { workspace = true }

