[package]
name = "paged-canvas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Pure-Rust facade for the Paged Web Canvas worker model. No wasm-bindgen — testable headlessly via `cargo test`. Orchestrates Tiers 1–4 (content, layout, resolution, output) on top of paged-renderer."

[lints]
workspace = true

[features]
default = ["cpu"]
# Enables the CPU rasterizer end-to-end through paged-renderer. Disable
# when the canvas is rendered by an out-of-process / out-of-thread
# rasterizer (e.g. the canvas-wasm crate compiled with WebGPU).
cpu = ["paged-renderer/cpu"]

[dependencies]
paged-renderer = { path = "../paged-renderer", default-features = false }
idml-import = { path = "../idml-import" }
paged-model = { path = "../paged-model" }
paged-scene = { path = "../paged-scene" }
paged-compose = { path = "../paged-compose" }
paged-text = { path = "../paged-text" }
paged-mutate = { path = "../paged-mutate" }
paged-color = { path = "../paged-color" }
paged-export-pdf = { path = "../paged-export-pdf" }
# W3.B2 — IDML save-back. idml-export deps only idml-import +
# paged-scene, so this introduces no cycle; both are wasm-clean
# (no native-only deps), so the export path compiles into the wasm
# worker too.
idml-export = { path = "../idml-export" }
# S7 — persist the composition (`document.pgd`) into the `.paged` container.
# paged-composition is a pure leaf (paged-flow + serde, no IDML/render), so
# it is wasm-clean and introduces no cycle.
paged-composition = { path = "../paged-composition" }
# N2 — persist the whole model natively (`document.pgm`) via the codec.
# paged-store deps only paged-scene + serde_json (wasm-clean, no cycle).
paged-store = { path = "../paged-store" }
serde = { workspace = true }
serde_json = "1"
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
# Snapshot tier encodes its output as PNG; the upstream renderer
# already produces `image::RgbaImage` so we use the same crate.
image = { workspace = true }
# Aftercare-A — UAX-29 word segmentation for `RequestWordBounds`
# (double-click word selection). Already in the lockfile via
# paged-text; wasm-clean (pure-Rust tables, no native deps).
unicode-segmentation = "1"
# S-13 — the `measure_text` font-metrics query constructs a
# `rustybuzz::Face` directly to read ascender / descender + shape the
# run via `paged_text::shape_run`. Already in the lockfile via
# paged-text; wasm-clean.
rustybuzz = "0.18"
# File ▸ New — synthesise a blank IDML package (see `blank.rs`). Same
# zip writer idml-import reads + idml-export emits; wasm-clean (both
# already ship it into the wasm worker), so this adds no new wasm dep.
zip = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
# W1.24 (audit B17) — perf bench lane. `paged-gen` regenerates the bench
# fixtures in setup (same path the fidelity corpus uses), so no fixture
# bytes are committed. criterion drives the measurements.
criterion = { workspace = true }
paged-gen = { path = "../paged-gen" }
# S4 overset-wire test builds a small inline overflowing IDML.
zip = { workspace = true }

# W1.24 (audit B17) — `make bench` lane. `harness = false` hands the
# bench main to criterion. Not wired into `verify` (benches are not a
# gate); run via `make bench` or `cargo bench -p paged-canvas`.
[[bench]]
name = "pipeline"
harness = false

